--- a/popup.html
+++ b/popup.html
@@ -73,9 +73,7 @@
 		</h1>
 
 		<div id="chatOutput">
-			<div class="bot-message">
-				Ask a question or request biographical info!
-			</div>
+			<div class="bot-message">Ask a question or request info!</div>
 		</div>
 
 		<div id="actionButtons" class="mt-auto mb-2">
@@ -83,10 +81,15 @@
 				id="getBioButton"
 				class="flex-1 bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded transition duration-150 ease-in-out text-sm"
 			>
-				Get Biographical Info
+				Get Bio Info
+			</button>
+			<button
+				id="getMilitaryServiceButton"
+				class="flex-1 bg-orange-600 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded transition duration-150 ease-in-out text-sm"
+			>
+				Military Service Summary
 			</button>
 		</div>
-
 		<div id="chatInputContainer">
 			<input
 				type="text"
