--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,6 @@
 				display: flex;
 				flex-direction: column;
 			}
-
 			#chatOutput {
 				flex-grow: 1;
 				overflow-y: auto;
@@ -25,7 +24,6 @@
 				border-radius: 0.375rem;
 				min-height: 100px;
 			}
-
 			.user-message,
 			.bot-message {
 				padding: 6px 10px;
@@ -34,47 +32,57 @@
 				max-width: 85%;
 				word-wrap: break-word;
 			}
-
 			.user-message {
 				background-color: #3b82f6;
 				color: white;
 				margin-left: auto;
 				text-align: right;
 			}
-
 			.bot-message {
 				background-color: #e5e7eb;
 				color: #1f2937;
 				margin-right: auto;
 				text-align: left;
 			}
-
 			#chatInputContainer {
 				display: flex;
 				gap: 5px;
 				margin-top: 5px;
 			}
-
 			#chatInput {
 				flex-grow: 1;
 			}
-
 			#actionButtons {
 				display: flex;
 				justify-content: space-between;
 				gap: 10px;
 			}
+			#apiKeySection {
+				margin-top: 15px;
+				padding-top: 10px;
+				border-top: 1px solid #d1d5db;
+			}
+			/* Style for the Clear Key button */
+			#resetApiKeyButton {
+				border-left-width: 1px; /* Add border between clear/save */
+			}
 		</style>
 	</head>
-
 	<body class="p-4 bg-gray-100">
-		<h1 class="text-lg font-semibold mb-3 text-center text-gray-700">
-			Photo Sleuth Chatbot
-		</h1>
-
-		<div id="chatOutput">
-			<div class="bot-message">Ask a question or request info!</div>
+		<div class="flex justify-between items-center mb-3">
+			<h1 class="text-lg font-semibold text-center text-gray-700 flex-grow">
+				Photo Sleuth Chatbot
+			</h1>
+			<button
+				id="resetChatButton"
+				title="Clear Chat History"
+				class="ml-2 p-1 bg-gray-300 hover:bg-gray-400 text-gray-700 rounded text-xs"
+			>
+				Clear Chat
+			</button>
 		</div>
+
+		<div id="chatOutput"></div>
 
 		<div id="actionButtons" class="mt-auto mb-2">
 			<button
@@ -90,6 +98,7 @@
 				Military Service Summary
 			</button>
 		</div>
+
 		<div id="chatInputContainer">
 			<input
 				type="text"
@@ -106,6 +115,38 @@
 		</div>
 
 		<p id="status" class="text-sm text-center mt-2 text-gray-500 h-4"></p>
+
+		<div id="apiKeySection">
+			<label for="apiKeyInput" class="block text-sm font-medium text-gray-700"
+				>Perplexity API Key:</label
+			>
+			<div class="mt-1 flex rounded-md shadow-sm">
+				<input
+					type="password"
+					name="apiKey"
+					id="apiKeyInput"
+					class="flex-1 block w-full rounded-none rounded-l-md border-gray-300 focus:border-blue-500 focus:ring-blue-500 sm:text-sm p-2"
+					placeholder="pplx-..."
+				/>
+				<button
+					id="resetApiKeyButton"
+					title="Clear Saved API Key"
+					class="inline-flex items-center border border-l-0 border-gray-300 bg-gray-50 px-3 text-sm text-red-600 hover:bg-red-100 focus:outline-none focus:ring-1 focus:ring-red-500 focus:border-red-500"
+				>
+					Clear Key
+				</button>
+				<button
+					id="saveApiKeyButton"
+					class="inline-flex items-center rounded-r-md border border-l-0 border-gray-300 bg-gray-50 px-3 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+				>
+					Save
+				</button>
+			</div>
+			<p
+				id="apiKeyStatus"
+				class="text-xs text-center mt-1 text-gray-500 h-3"
+			></p>
+		</div>
 
 		<script src="marked.min.js"></script>
 		<script src="purify.min.js"></script>
